MicroMoodle/tests/06-errores/semantico.p
# Test error semantico: asignar a constante
print 1;
PI := 5;
print 2;
